--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=testing
+APP_KEY=base64:PA9EDaIeV2NmFMzqQlZXJlIJbhMZ7yUJ6IGsDi0CoQI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,10 +13,10 @@ DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=sail
-DB_PASSWORD=passoword
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -25,7 +25,7 @@ SESSION_LIFETIME=120
 MEMCACHED_HOST=127.0.0.1
 FORWARD_DB_PORT=3306
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
